# data-engineering-portfolio

01_projects/athletes-etl-sqlserver/python/athletes_etl/: .dockerignore  .env  README.md  dockerfile  pyproject.toml  requirements.txt
01_projects/athletes-etl-sqlserver/python/athletes_etl/configs/: dev.yaml
01_projects/athletes-etl-sqlserver/python/athletes_etl/src/athletes_etl/: config.py  db.py  extract.py  logging_utils.py  main.py  main_YAML.py  transform.py
01_projects/athletes-etl-sqlserver/python/athletes_etl/src/athletes_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
01_projects/athletes-etl-sqlserver/python/athletes_etl/tests/: test_config.py  test_db.py  test_extract.py
01_projects/athletes-etl-sqlserver/python/python_learning/: Numbers.py  apostrophe.py  bicycles.py  cars.py  favorite_languages.py  full_name.py  motorcycles.py  simple_messages.py  user.py
01_projects/athletes-etl-sqlserver/python/python_learning/Chap10_FilesExceptions/: PythonCrashCourse_Book.code-workspace  alice.py  alice2.py  division_calculator.py  division_calculator2.py  file_reader.py  file_reader2.py  file_reader3.py  greet_user.py  little_women.txt  moby_dick.txt  number_reader.py  number_writer.py  pi_string.py  pi_string2.py  pi_string3.py  remember_me.py  remember_me2.py  remember_me3.py  remember_me4.py  remember_me5.py  username.json  word_count.py  word_count2.py  write_message.py  write_message2.py  write_message3.py
01_projects/athletes-etl-sqlserver/python/python_learning/Chap11_Testing_Your_Code/: names.py  (+6 more)
athletes-etl/configs/: dev.yaml
(+115 files in other folders)
